default/objects/NVMConnect__PendingDialEntry__c/NVMConnect__PendingDialEntry__c.object-meta.xml
<CustomObject>
    <label>Pending Dial Entry</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pending Dial Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>