default/objects/NVMConnect__PendingDialEntry__c/fields/NVMConnect__Indexed_Focus_Object_Id__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__Indexed_Focus_Object_Id__c</fullName>
    <description>Indexed Id of the object to pop and store activity records against if it is in Salesforce</description>
    <externalId>true</externalId>
    <label>Indexed Focus Object Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>