default/objects/NVMConnect__PendingDialEntry__c/fields/NVMConnect__OrderField2__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__OrderField2__c</fullName>
    <description>Second order field populated from the focus object</description>
    <label>Second order field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>